change color in change theme song form due to contrast issues

--- a/frontend/src/styles/EditProfile.module.css
+++ b/frontend/src/styles/EditProfile.module.css
@@ -28,7 +28,9 @@
     font-family: "Kranky", serif;
     font-size: 1.2rem;
     font-weight: 600;
-    color: #f39c12; 
+    background: linear-gradient(135deg, #ff0000, #00bae2);
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;  
     margin-bottom: 1rem; 
     text-align: center;
   }
